# polysolve_benchmark

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  benchmark_results.txt  readme.txt  run_benchmark.sh  test.sh
analysis/: analysis-2026-4-1.ipynb  analysis-2026-4-8.ipynb  analysis_2025-11-26.ipynb  analysis_2025-12-10_compare_threads.ipynb  analysis_2025-12-10_golf_ball.ipynb  analysis_2025-12-10_iteration_vs_mat_sz.ipynb  analysis_2025-12-3.ipynb  analysis_2026-3-11_compare_all_trilinos.ipynb  analysis_2026-3-25_golf_ball.ipynb  analysis_2026-4-15_ball_rollers.ipynb  analysis_2026-4-22_ball_rollers.ipynb  analysis_2026-5-20-mat-twist.ipynb  analysis_2026-5-21-hypre-subnormal-issue.ipynb  analysis_2026-5-27-ball-rollers-polyfem.ipynb  analysis_2026-6-2-hypre-subnormal-fix.ipynb  analysis_2026-6-2-hypre-subnormal-issue.ipynb  benchmark-walltime-append-exp.ipynb  benchmark-walltime-refreshed-tosave.ipynb  build_fix_notebook.py  build_subnormal_notebook.py  change_residual_tolerance.ipynb  debug_check.py  hypre_v31_relax88.sh  profiling_solvers.py  record_result.py  record_result_CN.py  smaller_granularity_iteration_residual_lower_res_tol_1e-8.ipynb  smaller_granularity_iteration_residual_res_tol_1e-10.ipynb  subnormal_all_relax.sh  subnormal_confirm_fix.sh  subnormal_fix_configs.sh  subnormal_hypre_experiments.sh  subnormal_matrix_probe.py  subnormal_np_omp_map.sh  test_parse.py  test_parser_function.py
analysis/.ipynb_checkpoints/: analysis_2025-12-10_compare_threads-checkpoint.ipynb  analysis_2025-12-10_iteration_vs_mat_sz-checkpoint.ipynb  analysis_2025-12-3-checkpoint.ipynb  analysis_2025-12-3-ignore-hypre-error-checkpoint.ipynb  analysis_2026-1-14_trilinos_pardiso_multithread-checkpoint.ipynb  analysis_2026-1-28_trilinos_pardiso_multithread-checkpoint.ipynb  analysis_2026-3-11_compare_all_trilinos-checkpoint.ipynb  analysis_2026-4-27-explore-steps-iteration-checkpoint.ipynb  analysis_2026-6-2-hypre-subnormal-fix-checkpoint.ipynb  analysis_2026-6-2-hypre-subnormal-issue-checkpoint.ipynb  benchmark-walltime-refreshed-append-checkpoint.ipynb  benchmark-walltime-refreshed-tosave-checkpoint.ipynb  change_residual_tolerance-checkpoint.ipynb  smaller_granularity_iteration_residual_res_tol_1e-10-checkpoint.ipynb
analysis/analysis_yibo/: benchmark-updatepath.ipynb  benchmark-walltime.ipynb  benchmark.ipynb  threads_vs_time.ipynb  vanilla.ipynb
analysis/analysis_yibo/.ipynb_checkpoints/: benchmark-checkpoint.ipynb  benchmark-updatepath-checkpoint.ipynb  benchmark-walltime-checkpoint.ipynb  threads_vs_time-checkpoint.ipynb
analysis/analysis_yibo/data/time_vs_thread/: amgcl1.csv  amgcl3.csv  hypre1.csv  hypre2.csv
analysis/data/time_vs_thread/: PardisoLU1.csv  amgcl2.csv  hypre1.csv
analysis/libs/: parser.py
analysis/temp_append/: benchmark-walltime-refreshed-append.ipynb  test_new_mat.py
analysis/temp_append/.ipynb_checkpoints/: benchmark-walltime-refreshed-append-checkpoint.ipynb
docs/: hypre_subnormal_2026-05-21.md  hypre_subnormal_2026-06-02.md  trilinos_solver_design.md
include/: polysolve.h  save_problem.hpp  test.h
scripts/: bin_to_mtx.cpp
src/: main.cpp  main_test_mat.cpp  main_test_mat_CN.cpp  main_test_mat_logger.cpp  main_test_mat_time.cpp  test.cpp
